# nickmoreton.co.uk

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  Procfile  README.md  app.json  compose.mysql.override.yaml  compose.postgresql.override.yaml  compose.sqlite3.override.yaml  compose.yaml  docker-compose-stage.yaml  docker-compose.yaml  docker-compose.yml  fabfile.py  gunicorn.conf.py  mydb.dump  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.in  requirements.prod.txt  requirements.txt
.github/workflows/: test.yml
checks/: dependencies.sh  migrations.sh  requirements.dev.txt  static.sh
client/scripts/: animate.js  aside.js  copier.js  index.js  nav.js
client/styles/: _forms.scss  _kitchen-sink.scss  _layout.scss  _mixins.scss  _reset.scss  _typography.scss  _vars.scss  index.scss
client/styles/components/: _aside.scss  _callout.scss  (+8 more)
docker/: Dockerfile
docs/: dokku-deployment.md  dokku.md  linode.dokku.md  local.dokku.md
docs/files/: dokku-setup.sh
fixtures/core/: data.json
fixtures/home/: data.json
fixtures/pages/: data.json
fixtures/users/: data.json
fixtures/wagtailcore/: data.json
fixtures/wagtailimages/: data.json
nginx/: nginx.conf
scripts/: images.js  server.js
static_src/js/: app.js
static_src/scss/: app.scss
webapp/: urls.py  wsgi.py
webapp/core/: apps.py  models.py
webapp/home/: models.py  views.py
webapp/pages/: apps.py  blocks.py  models.py  test.py
webapp/search/: views.py
webapp/settings/: base.py  dev.py
webapp/templates/: base.html
(+46 files in other folders)
