[project]
name = "nickmoreton-co-uk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.1,<4.2",
    "mysqlclient>=2,<3",
    "python-dotenv>=1,<2",
    "requests>=2,<3",
    "wagtail>=5.1,<5.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "tomli>=2.2.1",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
