[project]
name = "nickmoreton-co-uk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==4.1.10",
    "mysqlclient==2.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "wagtail==5.1.1",
    "whitenoise==6.9.0",
]
