[project]
name = "nickmoreton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=4.2,<4.3",
    "django-storages[s3]>=1.14.5",
    "gunicorn>=23.0.0",
    "mysqlclient==2.2.0",
    "psycopg2>=2.9.10",
    "requests==2.31.0",
    "wagtail>=6.4,<6.5",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
]
